<resources>
    <string name="app_name">3elaj</string>
    <string name="elaj">elaj</string>
    <string name="image1">image1</string>
    <string name="image2">image2</string>
    <string name="_3eelaj">3eelaj</string>
    <string name="textview">The search for a cure for
 the disease has become easier
    </string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="doctor">doctor</string>
    <string name="productname">ProductName</string>
    <string name="price">price</string>
    <string name="description">Description:</string>
    <string name="descriptiontext">descriptionText</string>
    <string name="quantity">Quantity:</string>
    <string name="quantitynum">quantityNum</string>
    <string name="productpricecard">productpricecard</string>
    <string name="productnamecard">productnamecard</string>
    <string name="phone_number">Phone Number:</string>
    <string name="info_3elaaj_com">info@3elaaj.com</string>
    <string name="email">Email:</string>
    <string name="contact_us">Contact Us</string>
    <string name="ramallah_rukab_street">Ramallah - Rukab Street</string>
    <string name="location">Location:</string>
    <string name="_0568124568">0568124568</string>
    <string name="type_of_feedback">Type of Feedback</string>
    <string name="massage">massage</string>
    <string-array name="Feedback">
        <item>technical support</item>
        <item>customer services</item>
    </string-array>

</resources>