<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#04ACB9"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:contentDescription="@string/image1"
                app:srcCompat="@drawable/elaj"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription="@string/image2"
                app:srcCompat="@drawable/icon1"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/elaj"
            app:srcCompat="@drawable/icon"
            tools:ignore="ImageContrastCheck" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="@string/_3eelaj"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#A34747"
        android:textSize="48sp"
        tools:ignore="TextContrastCheck"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="normal"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/login"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/buttonshape"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#12B9C5"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/reg"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/buttonshape"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#12B9C5"
        android:textSize="20sp"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:contentDescription="@string/doctor"
        app:srcCompat="@drawable/doctor"
        tools:ignore="ImageContrastCheck" />


</androidx.appcompat.widget.LinearLayoutCompat>